--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
         </article>
         <aside>
-
+            <button>Új Játék</button>
         </aside>
         <section>
-
+            <p>Kapcsold le a lehető legtöbb lámpát! (Legyen az összes zöld!)</p><br>
         </section>
         <footer>
             Tesztelte: Bella Richárd
